k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: user-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
  - name: http
    port: 80
    targetPort: 8081
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8081
    protocol: TCP
